--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,13 +1,43 @@
 <%- include Partials/header.ejs %>
 <%- include Partials/main_nav.ejs %>
 
-<main>
-  <div class="jumbotron jumbotron-fluid">
-    <div class="container">
-      <h1 class="display-4">Welcome to <%= title %> page</h1>
-    </div>
-  </div>
-</main>
+<div class = "leftCol">
+    <img src="/Assets/images/Snapchat-1173430696.png" class = aboutImage>
+</div>
+
+<div class = rightCol>
+  <h1 class = "title">About <span>Me</span></h1>
+  <article>
+    <p>
+      I am a 2nd-year student at OntarioTech University, studying Technology Management. 
+    </p>
+
+    <p> 
+        I like to code a lot and have always had a interest in coding several programming languages.
+    </p>
+    <p>
+        I am also good at making crafts.
+    </p>
+  </article>
+</div>
+
+<div class = "vid">
+  <video width="360" height="203" controls poster="portfolio.png" preload="auto" id = "video">
+    <source src="/Assets/videos/Portfolio.mp4" type="video/mp4">
+  </video>
+  <br>
+  <button onclick="playPause()">Play or pause the video</button>
+
+  <script>
+    var myVideo=document.getElementById("video");
+    function playPause()
+    {
+      if (myVideo.paused)
+          myVideo.play();
+      else myVideo.pause();
+    }
+  </script>
+</div>
 
 <%- include Partials/bottom_nav.ejs %>
 <%- include Partials/footer.ejs %>
