--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -1,13 +1,49 @@
 <%- include Partials/header.ejs %>
 <%- include Partials/main_nav.ejs %>
 
-<main>
-  <div class="jumbotron jumbotron-fluid">
-    <div class="container">
-      <h1 class="display-4">Welcome to <%= title %> page</h1>
-    </div>
+<div class = "contactContainer">
+  <div>
+    <h1 class = "title">Contact Me</h1>
   </div>
-</main>
+
+  <img src="/Assets/images/contact.png" class = "logo">
+
+  <form action="mailto:rajevan.sathiyakumar@ontariotechu.net" method="post" enctype="text/plain" ?subject = Mistakes  name = "form">
+    <p>
+        <label for="name">Full Name</label> <br>
+        <input type="text" name="name" placeholder="Enter full name" size = "32" required>
+    </p>
+
+    <p>
+        <label for="email">Email</label> <br>
+        <input type="email" name = "email" placeholder="Enter email" size="32" required>
+    </p>
+
+    <p>
+        <label for="phone">Phone Number</label> <br>
+        <input type="tel" name="phone" placeholder="123-456-7890" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" required>
+    </p>
+
+    <p>
+        <label for="comments">Comments/Message</label>
+        <br><br>
+        <textarea name="comments" placeholder="Comments" cols="40" rows="8"></textarea>
+    </p>
+
+    <p>
+        <input type="checkbox" name = "like">
+        <label for="like">Check if you think I am a good and kind person.</label>
+    </p>
+
+    <p>
+        <input type="submit" value="Click to submit the form.">
+    </p>
+
+    <p>
+        <input type="reset" value="Click to reset the form.">
+    </p>
+  </form>
+</div>
 
 <%- include Partials/bottom_nav.ejs %>
 <%- include Partials/footer.ejs %>
