--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,13 +1,15 @@
 <%- include Partials/header.ejs %>
 <%- include Partials/main_nav.ejs %>
 
-<main>
-  <div class="jumbotron jumbotron-fluid">
-    <div class="container">
-      <h1 class="display-4">Welcome to <%= title %> page</h1>
+<section id = "home">
+  <div class = "homeContainer">
+    <div>
+      <h2>Hello, My Name Is</h2>
+      <h1>Raj Sathiyakumar</h1>
     </div>
+    <img src="/Assets/images/r.png" class = image>
   </div>
-</main>
+  </section>
 
 <%- include Partials/bottom_nav.ejs %>
 <%- include Partials/footer.ejs %>
