--- a/views/about.ejs
+++ b/views/about.ejs
@@ -22,7 +22,7 @@
 </div>
 
 <div class = "vid">
-  <video width="360" height="203" controls poster="portfolio.png" preload="auto" id = "video">
+  <video width="360" height="203" controls poster="/Assets/images/portfolio.png" preload="auto" id = "video">
     <source src="/Assets/videos/Portfolio.mp4" type="video/mp4">
   </video>
   <br>
