--- a/public/Content/app.css
+++ b/public/Content/app.css
@@ -6,3 +6,213 @@
 .aboutImage {
     width: 5%;
 }
+
+body{
+    background-color: rgb(249,218,120);
+    font-size: 1.5rem;
+    padding: 0px;
+    margin: 0px;
+}
+
+
+.btn {
+    display:inline-block;
+    padding: 2% 5%;
+    background-color: rgb(255, 165, 0);
+    border: 4px solid rgb(0, 100, 200);
+    font-size: 1rem;
+}
+
+.homeContainer {
+    height: 600px;
+    /*padding: 10% 30%;*/
+    background-color: aqua;
+}
+
+.homeContainer h1{
+    font-size: 3.5rem;
+    color: rgb(0, 150, 70);
+    text-align: center;
+    
+}
+
+.homeContainer h2{
+    font-size: 3rem;
+    color: blueviolet;
+    text-align: center;
+}
+
+.image{
+    width: 25%;
+    margin-left: 37.5%;
+}
+
+
+.rightCol {
+    float: right;
+    width: 50%;
+    height: 450px;
+    background-color: cadetblue;
+    padding-top: 10%;
+}
+
+.leftCol {
+    float: left;
+    width: 50%;
+    height: 610px;
+    background-color: cadetblue;
+}
+
+.rightCol h1 {
+    font-size: 3rem;
+    color: blueviolet;
+}
+
+.rightCol p {
+    font-size: 1.5rem;
+    color: beige;
+}
+
+.leftCol .aboutImage {
+    width: 30%;
+    margin-top: 10%;
+    margin-left: 30%;
+}
+
+.vid{
+    margin-right: 15%;
+    width: 1550px;
+    background-color: cadetblue;
+}
+
+.vid video{
+    margin-bottom: 2%;
+    margin-right: 20%;
+    transform: translate(-170%, -40%);
+}
+
+.vid button {
+    transform: translate(130%, -290%);
+}
+
+.projectsContainer {
+    background-color: darkcyan;
+    height: 1100px;
+}
+
+.projectsContainer h1{
+    font-size: 3rem;
+    color: blueviolet;
+    text-align: center;
+    padding-top: 2%;
+}
+
+.projectsContainer .projects .proj .projImg {
+    width: 5%;
+    margin-left: 47.5%;
+    border: 3px solid green;
+}
+
+.projectsContainer .projects .proj .projImg2 {
+    width: 10%;
+    margin-left: 45.5%;
+    border: 3px solid green;
+}
+
+.projectsContainer .projects .proj .projImg3 {
+    width: 15%;
+    margin-left: 43.5%;
+    border: 3px solid green;
+}
+
+.projectsContainer .projects .proj .projDetails h3 {
+    font-size: 2rem;
+    color: chocolate;
+    text-align: center;
+}
+
+.projectsContainer .projects .proj .projDetails p {
+    font-size: 1.5rem;
+    color: beige;
+    text-align: center;
+}
+
+.contactContainer {
+    background-color: darkturquoise;
+}
+.contactContainer h1{
+    font-size: 3rem;
+    color: blueviolet;
+    text-align: center;
+    padding-top: 2%;
+}
+
+.contactContainer .logo{
+    width: 5%;
+    margin-left: 47.5%;
+    border: 3px solid green;
+}
+
+.contactContainer p label[for = "name"], label[for = "email"], label[for = "phone"], label[for = "comments"]   {
+    margin-left: 45%;
+    font-size: 1.5rem;
+    color: crimson;
+}
+
+.contactContainer p label[for = "like"]{
+    font-size: 1.5rem;
+    color: crimson;
+}
+
+.contactContainer p input[type = "text"], textarea {
+    width: 50%;
+    border: 3px solid green;
+    transform: translate(50%);
+}
+
+.contactContainer p input[type = "email"] {
+    width: 50%;
+    border: 3px solid green;
+    margin-left: 25%;
+}
+
+.contactContainer p input[type = "tel"]{
+    width: 50%;
+    border: 3px solid green;
+    margin-left: 25%;
+}
+
+.contactContainer p input[type = "checkbox"]{
+    margin-left: 32%;
+}
+
+.contactContainer p input[type = "submit"] {
+    margin-left: 42%;
+}
+
+.contactContainer p input[type = "reset"] {
+    margin-left: 47.5%;
+}
+
+#footer .footerContainer {
+    background-color: coral;
+}
+#footer .footerContainer .logo{
+    width: 5%;
+    margin-left: 46.5%;
+}
+
+#footer .footerContainer h3{
+    font-size: 1.5rem;
+    color: green;
+    text-align: center;
+}
+
+#footer .footerContainer h5{
+    font-size: 1rem;
+    color: darkblue;
+}
+
+.navbar fixed-bottom navbar-dark bg-dark {
+    background-color: green;
+}
